{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 32,
  "lineage": "50473db8-3e07-c75b-e33e-a2887dc5494e",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-034138a2b7c44e556",
            "arn": "arn:aws:ec2:eu-central-1:861665909914:elastic-ip/eipalloc-034138a2b7c44e556",
            "domain": "vpc",
            "id": "eipalloc-034138a2b7c44e556",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-18-158-94-94.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.158.94.94",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:861665909914:internet-gateway/igw-05c192876859c6684",
            "id": "igw-05c192876859c6684",
            "owner_id": "861665909914",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-5-vpc-igw"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-igw"
            },
            "vpc_id": "vpc-07305e0e5fb280c16"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-034138a2b7c44e556",
            "association_id": "eipassoc-073ab17c305755382",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0410eaff895cf1e9f",
            "network_interface_id": "eni-0f8a486e916bf75f8",
            "private_ip": "10.0.1.160",
            "public_ip": "18.158.94.94",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07b5ef86528c90d70",
            "tags": {
              "Name": "lesson-5-vpc-nat"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat"
            },
            "vpc_id": "vpc-07305e0e5fb280c16"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:861665909914:route-table/rtb-09e0fbf91516a5a98",
            "id": "rtb-09e0fbf91516a5a98",
            "owner_id": "861665909914",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0410eaff895cf1e9f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-5-vpc-private-rt"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07305e0e5fb280c16"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "861665909914",
            "id": "rtb-09e0fbf91516a5a98",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:861665909914:route-table/rtb-0bf307ad4c0991bc8",
            "id": "rtb-0bf307ad4c0991bc8",
            "owner_id": "861665909914",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c192876859c6684",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-5-vpc-public-rt"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07305e0e5fb280c16"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "861665909914",
            "id": "rtb-0bf307ad4c0991bc8",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04958f3947aa984fc",
            "region": "eu-central-1",
            "route_table_id": "rtb-09e0fbf91516a5a98",
            "subnet_id": "subnet-0cb5aa89c7cdabbee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064cd6fddb05ea259",
            "region": "eu-central-1",
            "route_table_id": "rtb-09e0fbf91516a5a98",
            "subnet_id": "subnet-02aa3967c5635a4ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09db12d4984977048",
            "region": "eu-central-1",
            "route_table_id": "rtb-09e0fbf91516a5a98",
            "subnet_id": "subnet-0adee370963a78b04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ea8ace4f2d591bc",
            "region": "eu-central-1",
            "route_table_id": "rtb-0bf307ad4c0991bc8",
            "subnet_id": "subnet-07b5ef86528c90d70"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063c002ebffe7c544",
            "region": "eu-central-1",
            "route_table_id": "rtb-0bf307ad4c0991bc8",
            "subnet_id": "subnet-0e6d9e63d6e61e5f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e865831aaf2b2384",
            "region": "eu-central-1",
            "route_table_id": "rtb-0bf307ad4c0991bc8",
            "subnet_id": "subnet-054b76be811c59eb5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:861665909914:subnet/subnet-0cb5aa89c7cdabbee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb5aa89c7cdabbee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "861665909914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-5-vpc-private-1"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-1"
            },
            "vpc_id": "vpc-07305e0e5fb280c16"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "861665909914",
            "id": "subnet-0cb5aa89c7cdabbee",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:861665909914:subnet/subnet-02aa3967c5635a4ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02aa3967c5635a4ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "861665909914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-5-vpc-private-2"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-2"
            },
            "vpc_id": "vpc-07305e0e5fb280c16"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "861665909914",
            "id": "subnet-02aa3967c5635a4ea",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:861665909914:subnet/subnet-0adee370963a78b04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adee370963a78b04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "861665909914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-5-vpc-private-3"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-3"
            },
            "vpc_id": "vpc-07305e0e5fb280c16"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "861665909914",
            "id": "subnet-0adee370963a78b04",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:861665909914:subnet/subnet-07b5ef86528c90d70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b5ef86528c90d70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "861665909914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-5-vpc-public-1"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-1"
            },
            "vpc_id": "vpc-07305e0e5fb280c16"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "861665909914",
            "id": "subnet-07b5ef86528c90d70",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:861665909914:subnet/subnet-0e6d9e63d6e61e5f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6d9e63d6e61e5f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "861665909914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-5-vpc-public-2"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-2"
            },
            "vpc_id": "vpc-07305e0e5fb280c16"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "861665909914",
            "id": "subnet-0e6d9e63d6e61e5f6",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:861665909914:subnet/subnet-054b76be811c59eb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054b76be811c59eb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "861665909914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-5-vpc-public-3"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-3"
            },
            "vpc_id": "vpc-07305e0e5fb280c16"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "861665909914",
            "id": "subnet-054b76be811c59eb5",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:861665909914:vpc/vpc-07305e0e5fb280c16",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-066a0366082fecfae",
            "default_route_table_id": "rtb-015341a058b5a7981",
            "default_security_group_id": "sg-08a05934909757184",
            "dhcp_options_id": "dopt-0bbbe05a50764b944",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07305e0e5fb280c16",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-015341a058b5a7981",
            "owner_id": "861665909914",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-5-vpc"
            },
            "tags_all": {
              "Name": "lesson-5-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "861665909914",
            "id": "vpc-07305e0e5fb280c16",
            "region": "eu-central-1"
          }
        }
      ]
    }
  ]
}